--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "handsontable": "^7.4.2",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "nodemon": "^2.0.2"
   }
 }
