--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "handsontable": "^7.4.2",
+    "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
     "nodemon": "^2.0.2"
   }
